--- a/app/globals.css
+++ b/app/globals.css
@@ -330,6 +330,9 @@
   .sidebar-nav_element {
     @apply flex-center p-16-semibold w-full whitespace-nowrap rounded-full bg-cover  transition-all hover:bg-purple-100 hover:shadow-inner;
   }
+  .sidebar-nav_element_1 {
+    @apply flex-center p-16-semibold w-full whitespace-nowrap rounded-lg bg-cover  transition-all hover:bg-purple-100 hover:shadow-inner;
+  }
 
   .sidebar-link {
     @apply p-16-semibold flex size-full gap-4 p-4;
